--- a/css/style.css
+++ b/css/style.css
@@ -1007,8 +1007,8 @@ label.error{
       backface-visibility: hidden;
       -webkit-overflow-scrolling: touch !important;
       /* Optimierung für flüssigeres Scrollen */
-      overscroll-behavior: none;
-      touch-action: pan-y;
+      overscroll-behavior: contain;
+      -webkit-overflow-scrolling: touch;
     }
     
     /* Scroll-Performance für Sections optimieren */
