--- a/css/enhanced-styles.css
+++ b/css/enhanced-styles.css
@@ -1054,7 +1054,10 @@ h1, h2, h3, h4, h5, h6 {
     padding-top: 80px;
   }
   
-  /* .main iframe Regeln entfernt - Iframe soll sich wie direktes Embed verhalten */
+  .main iframe {
+    height: 400px !important;
+    width: 100% !important;
+  }
   
   /* === 4. TYPOGRAPHY === */
   
@@ -1647,7 +1650,10 @@ h1, h2, h3, h4, h5, h6 {
     width: 100px !important;
   }
   
-  /* .main iframe Regeln entfernt - Iframe soll sich wie direktes Embed verhalten */
+  .main iframe {
+    height: 400px !important;
+    width: 100% !important;
+  }
   
   .text-parallax-content {
     font-size: 6rem !important;
@@ -1793,7 +1799,10 @@ h1, h2, h3, h4, h5, h6 {
   }
   
   /* Iframe Responsive Fix */
-  /* .main iframe Regeln entfernt - Iframe soll sich wie direktes Embed verhalten */
+  .main iframe {
+    height: 400px !important;
+    width: 100% !important;
+  }
   
   /* Project Carousel Mobile */
   .projects-carousel .owl-item {
@@ -1857,7 +1866,10 @@ h1, h2, h3, h4, h5, h6 {
 
 @media (max-width: 991px) and (orientation: landscape) {
   
-  /* .main iframe Regeln entfernt - Iframe soll sich wie direktes Embed verhalten */
+  .main iframe {
+    height: 400px !important;
+    width: 100% !important;
+  }
   
   .navbar-collapse {
     max-height: calc(100vh - 60px);
